--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,21 +10,22 @@
     <div class="mt-2">
         <span>Don't have an account? </span><a href="/register" class="btn-primary">Go to Registration Form </a>
     </div>
+        <div class="text-success mt-4"><%= congratsMessage %></div>
     <div class="text-danger mt-2"><%= pageMessage %></div>
-            <div class="login-form mt-3">
-                <form action="/login" method="POST">
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" name="email" class="form-control" id="exampleInputEmail1"
-                               aria-describedby="emailHelp" required>
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" name="password" class="form-control" id="exampleInputPassword1" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Enter</button>
-                </form>
+    <div class="login-form mt-3">
+        <form action="/login" method="POST">
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                       aria-describedby="emailHelp" required>
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-        </div>
-        <%- include("./partials/footer") %>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Enter</button>
+        </form>
+    </div>
+</div>
+<%- include("./partials/footer") %>
