edited "navbar" includes concerning the navbars

--- a/views/editFeedback.ejs
+++ b/views/editFeedback.ejs
@@ -1,5 +1,5 @@
 <%- include("./partials/header") %>
-<%- include("./partials/navbar3") %>
+<%- include("./partials/navbar") %>
 
 <div class="container mt-4 custom_font_style ">
     <div class="row">
