--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -1,5 +1,5 @@
 <%- include("./partials/header") %>
-<%- include("./partials/navbar3") %>
+<%- include("./partials/navbar") %>
 <% if(successMessage){ %>
     <div class="text-danger mt-4 d-flex justify-content-center custom_font_style">
         <h3> <%= successMessage %></h3>
