--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include("./partials/header") %>
-<%- include("./partials/navbarpresent") %>
+<%- include("./partials/navbarwelcome") %>
 <br>
 <div class="container mt-5 mb-5 w-25">
     <div class="form_registration">
