--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,46 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+<nav class="navbar navbar navbar-expand-md navbar-dark bg-primary ">
+       <a class="navbar-brand custom_text_color ms-5">Global Company</a>
     <div class="container">
-        <a class="navbar-brand" href="index.html" title="Homepage">Global</a>
         <button
-                class="navbar-toggler"
                 type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
+                class="navbar-toggler collapsed"
+                data-toggle="collapse"
+                data-target="#navbar-collapse"
                 aria-expanded="false"
-                aria-label="Toggle navigation"
         >
-            <span class="navbar-toggler-icon"></span>
+            <span class="sr-only">Toggle navigation</span> &#x2630;
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/" title="Homepage"
-                    >Home</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login" title="Login Page">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register" title="Registration Page">Registration</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html#contact" title="Contact Halyna Tesliuk">Contact</a>
-                </li>
-                <li class="nav-item" >
-                    <a href="/logout" class="btn btn-raised btn-danger">
-
-                        <i class="fa fa-lock mr-2" aria-hidden="true"></i>LogOut</a>
-                </li>
+        <a href="/" class="navbar-brand"></a>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item"><a href="/home" class="nav-link custom_text_color"> Home</a></li>
+                <li class="nav-item"><a href="/feedback" class="nav-link custom_text_color">Feedback</a></li>
+                <div class="ms-2"> <a href="/logout" class="btn btn-raised btn-danger custom_text_color">
+                        <i class="fa fa-lock mr-2" aria-hidden="true"></i>LogOut</a></div>
             </ul>
         </div>
-        <!--            <ul class=" nav-link d-flex justify-content-between">-->
-        <!--                <a href="/admin" class="btn btn-raised btn-danger">-->
-        <!--                    <i class="fa fa-lock mr-2" aria-hidden="true"></i>LogOut</a>-->
-        <!--            </ul>-->
     </div>
 </nav>
-<br>
-<br>
-<br>
