added a home page data

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,99 @@
 <%- include("./partials/header") %>
-<%- include("./partials/navbar3") %>
-<div class="container">
-    <div class="text">
-        <h1>Hello, Halyna</h1>
+<%- include("./partials/navbar") %>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-8">
+            <article class="article maincontent">
+                <h1 class="text-center custom_font_style custom_color">CHOOSE THE MOST CONVENIENT TARIFF PLAN</h1>
+                <div class="container mt-3 mt-1 grid_table custom_settings">
+                    <div class="row">
+                        <div class="col-sm-4 scale p-5">
+                            <h2 class="text-danger">Ґерданt</h2>
+                            <div>
+                                <strong> 2,5€ / місяць</strong>
+                            </div>
+                            <div>
+                                Рахунок IBAN EUR
+                            </div>
+                            <div>
+                                <strong>1 віртуальна картка</strong>
+                            </div>
+                            <div>
+                                <strong> Включає 10 SEPA переказів та карткових операцій на місяць </strong>
+                                (0,4€ за додаткову транзакцію)
+                            </div>
+                        </div>
+                        <div class="col-sm-4 p-5 scale">
+                            <h2 class="text-danger">Оберіг</h2>
+                            <div>
+                                2,5€ / місяць
+                            </div>
+                            <div>
+                                Рахунок IBAN EUR
+                            </div>
+                            <div>
+                                1 віртуальна картка
+                            </div>
+                            <div>
+                                Включає 10 SEPA переказів та карткових операцій на місяць (0,4€ за додаткову транзакцію)
+                            </div>
+                            <div>
+                                1 фізична картка
+                            </div>
+                            <div>
+                                Включає 2 операції зняття коштів у банкоматах (1€ за додаткову транзакцію)
+                            </div>
+                            <div>
+                                Включає 15 SEPA переказів та карткових операцій на місяць (0,4€ за додаткову транзакцію)
+                            </div>
+                        </div>
+                        <div class="col-sm-4 p-5 scale">
+                            <h2 class="text-danger">Тризуб</h2>
+                            <div>
+                                2,5€ / місяць
+                            </div>
+                            <div>
+                                Рахунок IBAN EUR
+                            </div>
+                            <div>
+                                2 віртуальні картки
+                            </div>
+                            <div>
+                                2 фізична картка
+                            </div>
+                            <div>
+                                Включає 5 операції зняття коштів у банкоматах (1€ за додаткову транзакцію)
+                            </div>
+                            <div>
+                                Включає 25 SEPA переказів та карткових операцій на місяць (0,4€ за додаткову транзакцію)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+
+        <aside class="col-md-4">
+            <article class="sidebar">
+                <h1 class="sidebar-title custom_font_style custom_color">Card</h1>
+                <ul class="sidebar-body">
+                    <li>Registration based on Ukrainian documents</li>
+                    <li>Ukrainian bank card with Ukrainian language support</li>
+                    <li>
+                        Part of the profit is aimed at supporting the citizens of Ukraine and the world.
+                    </li>
+                </ul>
+            </article>
+            <img src="images/5.jpg">/
+            <article class="article maincontent mt-3">
+                <h2 class="article-title custom_font_style custom_color">Our Contact</h2>
+                <ul class="sidebar-body">
+                    <li>go to our website - <a href="http://www.global-ukraine.org/">our website</a></li>
+                    <li>follow us on Twitter - <a href="http://www.twitter.com/">twitter</a></li>
+                    <li>follow us on FaceBook - <a href="http://www.facebook.com/">faceBook</a></li>
+                </ul>
+            </article>
+        </aside>
     </div>
 </div>
 <%- include("./partials/footer") %>
